src/scss/components/pages/main/_hero.scss
.hero {
  position: relative;
  min-height: 85vh;
  display: flex;
  align-items: center;
  @media (max-width: 480px) {
    min-height: 85vh;
  }

  // .hero::before
  &::before {
    content: "";
    position: absolute;
    z-index: 1;
    bottom: 0;
    width: 100%;
    height: 10rem;
    transform: rotate(180deg);
    background: linear-gradient(
      180deg,
      #f2f2f2 0%,
      rgba(242, 242, 242, 0) 100%
    );
    pointer-events: none;
  }
}
.hero__container {
  flex: 1;
}
.hero__content {
  position: relative;
  z-index: 1;
  max-width: 41.25rem;
  color: var(--color-black);
}

.hero__title {
  font-size: 8rem;
  font-weight: 700;
  @media (max-width: 1024px) {
    font-size: 6rem;
  }
  @media (max-width: 480px) {
    font-size: 4rem;
  }
}
.hero__subtitle {
  font-size: 1.5rem;
  font-family: var(--font-pt);
  margin-top: 1.5rem;
  @media (max-width: 480px) {
    font-size: 1.125rem;
  }
}

.hero__button {
  margin-top: 2.5rem;
  padding: 1rem 2rem;
}

.hero__picture {
  position: absolute;
  inset: 0;
  overflow: hidden;
  img {
    height: 100%;
    width: 100%;
  }
  @media (max-width: 480px) {
    img {
      object-position: 35% center;
    }
  }
}

.hero__interactive {
  border: none;
  position: absolute;
  inset: 0;
  width: 100%;
  height: 110%;
}

